--- a/_footer.html.eex
+++ b/_footer.html.eex
@@ -28,7 +28,7 @@
             <div class="footer-social-icon-container fontawesome-icon twitter"></div>
           </a>
           <a href="https://discord.com/invite/ngw88VXXnV" rel="noreferrer" target="_blank" class="footer-social-icon" title='<%= gettext("Discord") %>'>
-            <div class="footer-social-icon-container fontawesome-icon telegram"></div>
+            <div class="footer-social-icon-container fontawesome-icon discord"></div>
           </a>
         </div>
       </div>
